# dear_ros_node_viewer

./: .gitignore  .pylintrc  CLAUDE.md  README.md  architecture.yaml  main.py  pyproject.toml  requirements.txt  rosgraph_nodeonly.dot  setting.json  setup.py
.github/workflows/: pypi-publish.yml  python-app.yml
00_docs/: design.drawio
dear_ros_node_viewer/: __init__.py  __main__.py  caret2networkx.py  caret_extend_callback_group.py  caret_extend_path.py  dear_ros_node_viewer.py  dot2networkx.py  graph_layout.py  graph_manager.py  graph_view.py  graph_viewmodel.py  logger_factory.py  networkx2dearpygui.py  ros2networkx.py  running_ros_graph.py  setting.json
sample/: architecture_autoware.yaml  layout.json  note.md  rosgraph_nodetopic.dot  setting_vertical.json
src/dear_ros_node_viewer/: __init__.py  __main__.py  caret2networkx.py  caret_extend_callback_group.py  caret_extend_path.py  dear_ros_node_viewer.py  dot2networkx.py  graph_layout.py  graph_manager.py  graph_view.py  graph_viewmodel.py  logger_factory.py  mermaid_exporter.py  ros2networkx.py  setting.json  version_dummy.py
tests/: __init__.py  test_caret2networkx.py  test_caret_extend_callback_group.py  test_caret_extend_path.py  test_dear_ros_node_viewer.py  test_dot2networkx.py  test_graph_layout.py  test_graph_manager.py  test_logger_factory.py
